# PersonaGym-Reproduce

./: .env.temp  README.md  main.py  pyproject.toml
src/: app.py  config.py
src/data/: evaluation_tasks.py  sample_personas.py  settings_catalog.py
src/graph/: builder.py  routing.py  state.py
src/models/: schemas.py
src/nodes/: question_generation.py  report_aggregation.py  response_evaluation.py  response_generation.py  setting_selection.py
src/prompts/: persona.py  question_generation.py  response_evaluation.py  setting_selection.py
src/services/: persona_dataset.py  results_writer.py
src/tests/: test_full_pipeline.py  test_question_generation.py  test_response_generation.py  test_setting_selection.py
src/utils/: aggregation.py
