[project]
name = "personagym-reproduce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "httpx[socks]>=0.28.1",
    "joblib>=1.5.3",
    "langchain>=1.3.13",
    "langchain-litellm>=0.7.0",
    "langgraph>=1.2.9",
    "litellm>=1.91.2",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]
